[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "prompthub-cli"
version = "0.1.0"
description = "Git-like version control for AI prompts — with semantic diff and output regression testing"
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "sentence-transformers",
    "tomli",
    "tomli-w",
    "httpx",
    "pyfiglet",
    "numpy"
]

[project.scripts]
prompthub = "cli.main:app"

[tool.setuptools.packages.find]
include = ["cli*", "core*", "models*"]