[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "prompthub-cli"
version = "0.1.0"
description = "Git-like version control for AI prompts — with semantic diff and output regression testing"
readme = "DESCRIPTION.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["cli", "prompt", "llm", "ai", "version-control", "developer-tools"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Version Control",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
prompthub = "cli.main:app"

[tool.setuptools.packages.find]
include = ["cli*", "core*", "models*"]